--- a/.env.default
+++ b/.env.default
@@ -1,7 +1,7 @@
 NODE_ENV=development
 API_PORT=8082
 #default to logs folder under root directory if not set
-#LOG_PATH=/var/www/api/logs
-MONGODB_URL=mongodb://localhos/api-base
+#LOG_DIR=/var/www/api/logs
+MONGODB_URL=mongodb://localhost/api-base
 SENDGRID_API_KEY=
 TOKEN_SECRET=KOxC6HRduwyVcZe4
